// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Grid should be render grid with a cell and a gutter 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 100%;
  -ms-flex: 100%;
  flex: 100%;
  margin-left: -2.4rem;
  margin-right: -2.4rem;
}

.c0 > .sc-bdVaJa {
  padding-right: 2.4rem;
  padding-left: 2.4rem;
}

<div
  className="c0"
>
  <styled.div
    push={null}
  >
    col 1
  </styled.div>
  <styled.div
    push={null}
  >
    col 2
  </styled.div>
</div>
`;

exports[`Component Grid should be render grid with a cell with 1/2push and 1/2 size 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 100%;
  -ms-flex: 100%;
  flex: 100%;
  margin-left: -2.4rem;
  margin-right: -2.4rem;
}

.c0 > .sc-bdVaJa {
  padding-right: 2.4rem;
  padding-left: 2.4rem;
}

<div
  className="c0"
>
  <styled.div
    push={0.5}
    size={0.5}
  >
    col 1 size 50%, push 50%
  </styled.div>
</div>
`;

exports[`Component Grid should be render without crash 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex: 100%;
  -ms-flex: 100%;
  flex: 100%;
}

<div
  className="c0"
/>
`;
